# DisparityVisualizer

./: CMakeLists.txt  README.md
cones/: bw_disparity_L.pgm  conesL.ppm  result_finalL.ppm
include/: ViewManager.h
src/: ViewManager.cpp  vis.cpp
